--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -5,3 +5,12 @@
 .big-text {
   font-size: 72px;
 }
+
+.main-header {
+  font-size: 42px;
+  color: green;
+}
+
+#git-commands {
+  background-color: blue;
+}
